vote-k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: voteapp
  annotations:
  labels:
    run: vote
  name: vote-server
spec:
  replicas: 1
  selector:
    matchLabels:
      run: vote
  template:
    metadata:
      labels:
        run: vote
    spec:
      containers:
      - image: dansolo7/voting:$BUILD_NUMBER
        imagePullPolicy: Always
        name: vote
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  namespace: voteapp
  labels:
    run: vote
  name: vote-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: vote
  sessionAffinity: None
  type: NodePort
---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    namespace: voteapp
    name: vote-ingress
    annotations:
      kubernetes.io/ingress.class: nginx
  spec:
    rules:
    - host: www.vote.com
      http:
        paths:
          - path: /
            backend:
              serviceName: vote-service
              servicePort: 80
